use the processbuilder instead of the normal process